Fix link overflow

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -2,4 +2,5 @@
 	white-space: nowrap;
 	overflow: auto;
 	display: block;
+	max-width: 100%;
 }
